samples/_failures_safe/1761650153_c9157d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b730142.c: In function ‘main’:
./samples/SAFE/__tmp_6b730142.c:159:13: error: expected declaration or statement at end of input
  159 |             printf("\nSecond matrix:\n");
      |             ^~~~~~
./samples/SAFE/__tmp_6b730142.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6b730142.c:159:13: error: expected declaration or statement at end of input
